--- a/src/package.xml
+++ b/src/package.xml
@@ -1,27 +1,20 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Package xmlns="http://soap.sforce.com/2006/04/metadata">
     <types>
-        <members>*</members>
+        <members>AccountTriggerHelper</members>
+        <members>BatchSendAccountsToExactOnline</members>
+        <members>BatchSendAccountsToExactOnlineException</members>
+        <members>ConnectWithExactonline</members>
+        <members>TriggerHandler</members>
+        <members>TriggerHandler_Test</members>
         <name>ApexClass</name>
     </types>
     <types>
-        <members>*</members>
-        <name>ApexComponent</name>
-    </types>
-    <types>
-        <members>*</members>
-        <name>ApexPage</name>
-    </types>
-    <types>
-        <members>*</members>
+        <members>AccountTrigger</members>
         <name>ApexTrigger</name>
     </types>
     <types>
-        <members>*</members>
-        <name>AuraDefinitionBundle</name>
-    </types>
-    <types>
-        <members>*</members>
+        <members>AccountMapping</members>
         <name>StaticResource</name>
     </types>
     <version>50.0</version>
